# IR_ws

./: 语音功能移植.md
aruco_ros/aruco_ros/launch/: double.launch  marker_publisher.launch  single.launch
castlex_awake/: CMakeLists.txt  package.xml
castlex_awake/launch/: castlex_awake.launch
castlex_awake/src/: castlex_xiaogu_awake_node.cpp  castlex_xiaogu_oneshot_awake_node.cpp
castlex_voice_system/: CMakeLists.txt  package.xml
castlex_voice_system/launch/: voice_nav.launch  voice_robot.launch
castlex_voice_system/params/: c.xml  castlex_auto.xml  objectDetect.xml  robot_xdu.xml  voiceNav.xml  voiceRobo.xml
castlex_voice_system/src/: castlex_auto_order.cpp  castlex_cmd.cpp  castlex_tl_nlu.cpp  castlex_xiaogu_asr.cpp  castlex_xiaogu_order.cpp  castlex_xiaogu_tts.cpp  object_order.cpp  robot_xdu_order.cpp  voice_control.cpp  voice_grasp_order.cpp  voice_nav_order.cpp  voice_robot_order.cpp
robot_dep/: libsox-fmt-alsa_14.4.1-5+deb8u4ubuntu0.1_amd64.deb  libsox-fmt-base_14.4.1-5+deb8u4ubuntu0.1_amd64.deb  libsox2_14.4.1-5+deb8u4ubuntu0.1_amd64.deb  sox_14.4.1-5+deb8u4ubuntu0.1_amd64.deb
ros_core/: CMakeLists.txt  package.xml
ros_core/msg/: RobotStateInfo.msg
service_example/launch/: voice_robot.launch
service_example/scripts/: agv_start(初版).py  agv_start.py  agv_test_demo.py  auto_test_demo.py  demo(back).py  key_control.py
usb_cam/: CMakeLists.txt
usb_cam/launch/: 000937.yaml  000941.yaml  ar_track_alvar_test.launch  back.yaml  cv-multi.launch  front.yaml  multi.launch  ov2610.launch  ov2610.yaml  ov2610mjpg.launch  ov2657(yuyv).launch  ov2657.launch  ov7225(yuyv).launch  ov7225.launch  tf.launch  usb_cam-test.launch
xmate_robot_2/: CMakeLists(复件).txt  CMakeLists.txt
xmate_robot_2/inc/include/: hg_ai_robot.h
xmate_robot_2/launch/: bjj_grasp.launch  bjj_place_demo.launch  grasp_test_demo.launch  new_place_demo.launch  new_product_grasp_demo.launch  place_grasp_demo_new.launch  product_ar_test.launch  product_place_demo.launch  test_demo.launch  voice_place_grasp_demo_new.launch
xmate_robot_2/script/: ar_get_pose.py  ar_pose_data.py
xmate_robot_2/src/: bjj_grasp_demo.cpp  new_place_demo.cpp  new_product_grasp_demo.cpp  new_product_place_demo.cpp  place_bjj_demo.cpp  place_grasp_demo_new.cpp  product_ar_test.cpp  voice_grasp_place.cpp
